@@ -20,6 +20,7 @@ debian-installer (20180622) UNRELEASED; urgency=medium
   [ Cyril Brulebois (DEBAMAX) ]
   * Prepare building d-i with bits from backports. Based on:
     https://lists.debian.org/debian-boot/2014/01/msg00407.html
+  * debian/rules: Improve readability.
 
  -- Andreas B. Mundt <andi@debian.org>  Fri, 22 Jun 2018 17:25:42 +0200
 
